# REXSpeeder

./: .gitignore  INSTALL  LICENSE  README  README.txt  REXReader++.sln  readme.md
ExampleUsage/: 10.xp  1280.xp  160.xp  20.xp  320.xp  40.xp  80.xp  cat-edited.xp  cat.xp  example.cpp  example.vcxproj  layered.xp  nyan.xp
ExampleUsage/VisualStudio/: VSUse.sln  VSUse.vcxproj
ExampleUsage/VisualStudio/VSUse/: ....cat-edited.xp  VSUse.vcxproj  VSUse.vcxproj.filters
REXReader++/: REXReader++.vcxproj  RexPaint.cpp  RexPaint.h  example.cpp
VisualStudio/: REXSpeeder.sln  REXSpeeder.vcxproj
cmake/: CMakeLists.txt
example/: 640.xp  example.cpp  example.sln
example/files/: 2500.xp
include/: README  REXSpeeder.h  REXSpeeder.lib
src/: REXSpeeder.cpp  REXSpeeder.h  example.cpp
